--- a/app/src/snippets/admin.css
+++ b/app/src/snippets/admin.css
@@ -23,11 +23,14 @@ main>* {
   display: grid;
   grid-template-rows: auto auto;
   overflow: auto;
-  padding-right: 1em;
 }
 
 #left-panel>* {
   overflow: auto;
+}
+
+#left-panel>:nth-child(2) {
+  padding-right: 1em;
 }
 
 form {
