--- a/app/public/css/base/layout.css
+++ b/app/public/css/base/layout.css
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, hr, p, ul, ol, table, details, summary, form, .admin-box {
+h1, h2, h3, h4, hr, p, ul, ol, table, details, summary, form {
   margin-bottom: 1em;
 }
 
@@ -22,16 +22,4 @@ h1, h2, h3, h4, hr, p, ul, ol, table, details, summary, form, .admin-box {
     grid-template-columns: 1fr 1fr;
     gap: 3em;
   }
-}
-
-.admin-box {
-  border: 1px solid var(--admin-border-color);
-  padding: 1em 1em 0;
-  background-color: var(--admin-bg-color);
-}
-
-details.info {
-  border: 1px solid var(--disclaimer-border-color);
-  padding: 1em 1em 0;
-  background-color: var(--disclaimer-bg-color);
 }
