--- a/app/pages/snippets/one/snippet.css
+++ b/app/pages/snippets/one/snippet.css
@@ -6,7 +6,26 @@
   margin-bottom: 0;
 }
 
-.content>p:nth-child(2) {
+.content>p:nth-child(3) {
   margin-bottom: 2em;
   font-size: 80%;
+}
+
+.prevnextlinks {
+  border: 1px solid var(--blue-bg);
+  background-color: #2af1;
+  border-radius: 3px;
+  padding: 1em;
+  margin: 1em 0;
+  text-align: center;
+}
+
+.prevnextlinks .title {
+  font-style: italic;
+}
+
+.prevnextlinks>div {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-between;
 }
