--- a/app/pages/books/one-book/book.css
+++ b/app/pages/books/one-book/book.css
@@ -35,7 +35,8 @@
 }
 
 ul.snippets-latest {
-  padding-left: 20px;
+  padding-left: 0;
   max-height: 700px;
   overflow: auto;
+  list-style-type: none;
 }
