--- a/app/components/quicklinks.css
+++ b/app/components/quicklinks.css
@@ -49,7 +49,8 @@
 }
 
 #posts .post-box .image {
-  max-width: 100%;
+  width: 100%;
+  height: auto;
 }
 
 #posts .post-box .excerpt>*:last-child {
