--- a/app/components/site-header/feedback.css
+++ b/app/components/site-header/feedback.css
@@ -25,6 +25,7 @@
   padding: 2em;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
+  position: relative;
 }
 
 #feedbackBox form :is(input, textarea, button) {
@@ -35,7 +36,15 @@
   padding: 10px;
 }
 
-#feedbackBox textarea {
+#feedbackBox form #close-feedback {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  color: inherit;
+  border-radius: 3px;
+}
+
+#feedbackBox form textarea {
   width: 100%;
   height: 100%;
 }
