Category page also shows snippets in that category.

--- a/app/components/container/container.css
+++ b/app/components/container/container.css
@@ -13,6 +13,16 @@
   gap: 1em;
 }
 
+.centered-page {
+  display: grid;
+  place-items: center;
+}
+
+.centered-page>* {
+  max-width: 400px;
+  width: 50%;
+}
+
 @media (min-width: 600px) {
   .split-page {
     grid-template-columns: 1fr 1fr;
