--- a/app/routes/category/category.css
+++ b/app/routes/category/category.css
@@ -15,3 +15,21 @@
 #category li .author {
   font-size: 80%;
 }
+
+#snippets-in-category .scrollable-area {
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+#snippets-in-category>div>ul {
+  padding-left: 0;
+}
+
+#snippets-in-category ul {
+  list-style-type: none;
+}
+
+#snippets-in-category ul>li>ul {
+  list-style-type: none;
+  padding-left: 20px;
+}
