--- a/app/components/navlinks.css
+++ b/app/components/navlinks.css
@@ -7,3 +7,13 @@
   padding-bottom: 2em;
   border-bottom: 1px solid var(--border-color);
 }
+
+#navlinks-donate {
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: center; */
+  gap: 1em;
+  margin: 2em 0;
+  padding-bottom: 2em;
+  border-bottom: 1px solid var(--border-color);
+}
