--- a/app/routes/home/home.css
+++ b/app/routes/home/home.css
@@ -59,3 +59,27 @@
 .home .content blockquote li p {
   margin-bottom: 0;
 }
+
+#featured-books {
+  padding-left: 0;
+  list-style-type: none;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1em;
+}
+
+@media (min-width: 600px) {
+  #featured-books {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2em;
+  }
+}
+
+@media (min-width: 800px) {
+  #featured-books {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.featured-book {}
