--- a/app/routes/home/home.css
+++ b/app/routes/home/home.css
@@ -60,6 +60,11 @@
   margin-bottom: 0;
 }
 
+#featured-books-container {
+  background: var(--bgalt);
+  padding: 2em 0;
+}
+
 #featured-books {
   padding-left: 0;
   list-style-type: none;
