--- a/app/routes/home/home.css
+++ b/app/routes/home/home.css
@@ -80,16 +80,16 @@
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 750px) {
   #featured-books {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 
-@media (min-width: 800px) {
-  #featured-books {
-    grid-template-columns: repeat(4, 1fr);
-  }
+.featured-book .thumb {
+  margin-bottom: 1em;
+  width: 100%;
+  height: 10em;
+  background-position: center;
+  background-size: cover;
 }
-
-.featured-book {}
