--- a/app/routes/home/home.css
+++ b/app/routes/home/home.css
@@ -52,11 +52,11 @@
   padding: 1em;
 }
 
-.home .content blockquote li {
+.home .typography blockquote li {
   list-style-type: none;
 }
 
-.home .content blockquote li p {
+.home .typography blockquote li p {
   margin-bottom: 0;
 }
 
