These didn't seem to need to be universal.

--- a/app/site/css/base.css
+++ b/app/site/css/base.css
@@ -43,8 +43,8 @@ html.dark-mode {
 
 * {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  /* padding: 0; */
+  /* box-sizing: border-box; */
 }
 
 :is(h1, h2, h3, h4, hr, p, ul, ol, table, details, summary, form) {
