Simpler way to get random snippet in book.

--- a/app/site/css/book.css
+++ b/app/site/css/book.css
@@ -34,7 +34,7 @@
   white-space: nowrap;
 }
 
-ul.snippets-latest {
+ul.snippets-in-book {
   padding-left: 0;
   max-height: 700px;
   overflow: auto;
