--- a/app/components/quicklinks/quicklinks.css
+++ b/app/components/quicklinks/quicklinks.css
@@ -1,9 +1,12 @@
-#recents {
-  background: var(--bgalt);
+.recents {
   padding: 2em 0;
 }
 
-#recents>*>ul {
+.recents.alt {
+  background: var(--bgalt);
+}
+
+.recents>*>ul {
   margin-bottom: 3em;
 }
 
@@ -102,4 +105,57 @@
   transition: 75ms ease-in opacity;
   opacity: 0;
   text-shadow: 0px 1px 3px #000;
+}
+
+
+
+#featured-books-area {
+  background: var(--bgalt);
+  padding: 1em 0;
+}
+
+#featured-books-container {
+  margin: 0 auto;
+  max-width: calc(100% - 4em);
+}
+
+#featured-books {
+  padding-left: 0;
+  list-style-type: none;
+
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 2em;
+}
+
+@media (min-width: 450px) {
+  #featured-books {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 750px) {
+  #featured-books {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1050px) {
+  #featured-books {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (min-width: 1350px) {
+  #featured-books {
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+.featured-book .thumb {
+  margin-bottom: 1em;
+  width: 100%;
+  height: 10em;
+  background-position: center;
+  background-size: cover;
 }
