Explicit but similar enough to status quo.

--- a/site/css/base.css
+++ b/site/css/base.css
@@ -68,6 +68,7 @@ button {
   outline: 1px solid var(--border-color);
   box-sizing: border-box;
   width: 100%;
+  font-family: system-ui;
 }
 
 :read-write:focus,
