--- a/site/css/books.css
+++ b/site/css/books.css
@@ -1,4 +1,5 @@
 #books-filters {
+  font-family: system-ui;
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 1em;
@@ -25,4 +26,9 @@ input[name=bookstars]+svg {
 
 input[name=bookstars].lit+svg {
   opacity: 1;
+}
+
+#books-filters .label {
+  opacity: 0.5;
+  font-variant: small-caps;
 }
