Site footer links are like site header links.

--- a/site/css/site-footer.css
+++ b/site/css/site-footer.css
@@ -1,8 +1,11 @@
 #site-footer {
-  color: #999;
   margin: 3em 1em;
 }
 
 #site-footer p {
   text-align: center;
+}
+
+#site-footer a {
+  color: inherit;
 }
