--- a/site/components/quicklinks/quicklinks.css
+++ b/site/components/quicklinks/quicklinks.css
@@ -124,38 +124,41 @@
   list-style-type: none;
 
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: 2em;
+  gap: 1em;
 }
 
 @media (min-width: 450px) {
   #featured-books {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(24em, 1fr));
   }
 }
 
-@media (min-width: 750px) {
-  #featured-books {
-    grid-template-columns: repeat(3, 1fr);
-  }
+.featured-book {
+  padding: 0 1em 1em;
 }
 
-@media (min-width: 1050px) {
-  #featured-books {
-    grid-template-columns: repeat(4, 1fr);
-  }
+.featured-book a {
+  color: inherit;
 }
 
-@media (min-width: 1350px) {
-  #featured-books {
-    grid-template-columns: repeat(5, 1fr);
-  }
+.featured-book,
+.featured-book>* {
+  position: relative;
 }
 
 .featured-book .thumb {
-  margin-bottom: 1em;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 10em;
+  height: 100%;
+  opacity: 0.5;
+  background-color: var(--bgalt);
   background-position: center;
   background-size: cover;
+  box-sizing: border-box;
+}
+
+.featured-book p {
+  margin: 0;
 }
