Slightly prettier filter buttons?

--- a/site/css/base.css
+++ b/site/css/base.css
@@ -84,6 +84,19 @@ label:has(input) {
 
 label:has(input[type=radio]) {
   padding: 3px 7px;
+  position: relative;
+}
+
+label:has(input[type=radio]:checked)::before {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue-bg);
+  opacity: 0.12;
 }
 
 label:has(input[type=radio]:checked) {
