--- a/site/css/page/prayers.css
+++ b/site/css/page/prayers.css
@@ -3,18 +3,17 @@
   grid-auto-flow: column;
   justify-content: left;
   gap: 1em;
-  font-weight: bold;
   padding-left: 0;
   list-style-type: none;
 }
 
 #tabs-head a {
   text-decoration: none;
+  font-weight: bold;
 }
 
 #tabs-head a:not(.selected) {
-  color: inherit;
-
+  color: var(--bold-color);
 }
 
 #tabs-head a.selected {
