Make shimmer cooler.

--- a/site/css/components/loading.css
+++ b/site/css/components/loading.css
@@ -21,13 +21,14 @@ blockquote p:has(.loading-item) {
   right: 0;
   content: '';
 
-  transform: translateX(-100%);
+  width: 30em;
+  transform: translateX(-30em);
   background: linear-gradient(90deg, currentColor 0%, #333 50%, currentColor 100%);
   animation: shimmer 3s infinite;
 }
 
 @keyframes shimmer {
   100% {
-    transform: translateX(100%);
+    transform: translateX(30em);
   }
 }
