--- a/site/css/page/book.css
+++ b/site/css/page/book.css
@@ -1,4 +1,4 @@
-table.downloads {
+/* table.downloads {
   border-collapse: collapse;
   margin: 1em 0;
 }
@@ -10,4 +10,4 @@ table.downloads td {
 
 table.downloads td.link {
   white-space: nowrap;
-}
+} */
