--- a/site/css/page/books.css
+++ b/site/css/page/books.css
@@ -1,7 +1,7 @@
 #books-filters {
   font-family: system-ui;
   display: grid;
-  align-items: baseline;
+  align-items: center;
   grid-template-columns: auto 1fr;
   gap: 1em;
   margin: 1em 0;
