--- a/site/admin/new-book-snippet.css
+++ b/site/admin/new-book-snippet.css
@@ -10,6 +10,8 @@ main {
   width: 100vw;
   height: 100vh;
   display: grid;
+  box-sizing: border-box;
+  padding: 1em;
   gap: 1em;
   grid-template-columns: 15fr 20fr 15fr 30fr;
 }
