--- a/site/css/page/read-book.css
+++ b/site/css/page/read-book.css
@@ -4,3 +4,36 @@
   gap: 1em 0.1em;
   align-items: baseline;
 }
+
+main {
+  padding: 0 1em;
+  width: 100vw;
+  height: 100vh;
+  box-sizing: border-box;
+
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
+section {
+  display: grid;
+  gap: 1em;
+  overflow: auto;
+}
+
+section iframe {
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-width: 1000px) {
+
+  section {
+    grid-template-columns: repeat(3, minmax(379px, 1fr));
+  }
+
+  section>div {
+    overflow: auto;
+  }
+
+}
