--- a/site/css/page/read-book.css
+++ b/site/css/page/read-book.css
@@ -24,6 +24,7 @@ section {
 section iframe {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
 
 @media (min-width: 1000px) {
@@ -32,7 +33,7 @@ section iframe {
     grid-template-columns: 1fr 420px 1fr;
   }
 
-  section>*:nth-child(2) {
+  section>*:not(:last-child) {
     padding-right: 1em;
   }
 
