--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -2,8 +2,7 @@ html,
 body {
     width: 100vw;
     height: 100vh;
-    padding: 0;
-    margin: 0;
+    overflow: hidden;
     /* display: grid;
     grid-template-rows: auto 1fr;
     overflow: auto;
@@ -13,17 +12,23 @@ body {
 }
 
 * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 #tab-container {
-    width: 100vw;
-    height: 100vh;
+    /* width: 100vw;
+    height: 100vh; */
     overflow: hidden;
 }
 
 #tabs-names {
-    height: 3em;
+    /* height: 3em; */
+
+    position: fixed;
+    top: 0;
+    left: 50%;
 
     display: grid;
     grid-auto-flow: column;
@@ -40,18 +45,20 @@ body {
 }
 
 #tabs-bodies {
-    width: 100%;
+    /* width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: auto; */
 }
 
 #tabs-bodies::-webkit-scrollbar {
-    display: none;
+    /* display: none; */
 }
 
 .panel {
     width: 100vw;
-    height: calc(100vh - 3em);
+    /* height: calc(100vh - 3em); */
+    height: 100vh;
+    box-sizing: border-box;
     overflow: auto;
     border: 1px dashed red;
 }
