--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -72,9 +72,11 @@ body {
 
 .prayer {
     white-space: pre-wrap;
-
     max-width: 30em;
     font-size: 150%;
+
+    max-height: 100vh;
+    overflow: auto;
 }
 
 .prayer p {
