--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     background-color: #222 !important;
     color-scheme: dark;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 * {
@@ -25,6 +25,8 @@ body {
     position: fixed;
     top: 0;
     left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
 
     display: grid;
     grid-auto-flow: column;
@@ -48,6 +50,28 @@ body {
 
 #tabs-bodies::-webkit-scrollbar {
     /* display: none; */
+}
+
+.panel {
+    position: relative;
+}
+
+.page-changer {
+    position: absolute;
+    top: 50%;
+
+    transform: translateY(-50%);
+    border: 0;
+    outline: 0;
+    padding: .25em .5em;
+    color: #fff;
+    background: #0005;
+    font-size: 300%;
+    cursor: pointer;
+}
+
+.page-changer.left {
+    /* left: 0; */
 }
 
 .centered {
