--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     background-color: #222 !important;
     color-scheme: dark;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 * {
