--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -13,15 +13,7 @@ body {
     box-sizing: border-box;
 }
 
-#tab-container {
-    /* width: 100vw;
-    height: 100vh; */
-    /* overflow: hidden; */
-}
-
 #tabs-names {
-    /* height: 3em; */
-
     position: fixed;
     top: 0;
     left: 50%;
@@ -34,7 +26,6 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    /* margin: 0 1em; */
 }
 
 #tabs-names a {
@@ -42,14 +33,8 @@ body {
     display: inline-block;
 }
 
-#tabs-bodies {
-    /* width: 100%;
-    height: 100%;
-    overflow: auto; */
-}
-
-#tabs-bodies::-webkit-scrollbar {
-    /* display: none; */
+#tabs-names a.active {
+    border-bottom: 1px solid red;
 }
 
 .panel {
@@ -76,10 +61,6 @@ body {
     background-color: #0007;
 }
 
-.page-changer.left {
-    /* left: 0; */
-}
-
 .centered {
     display: grid;
     justify-content: center;
@@ -88,7 +69,6 @@ body {
 
 .panel {
     width: 100vw;
-    /* height: calc(100vh - 3em); */
     height: 100vh;
     box-sizing: border-box;
     overflow: auto;
@@ -110,7 +90,6 @@ body {
 }
 
 .prayer p {
-    /* max-width: 100%; */
     margin: .5em 0;
 }
 
