--- a/site/prayers/style.css
+++ b/site/prayers/style.css
@@ -77,8 +77,7 @@ body {
 .panel {
     width: 100vw;
     height: 100vh;
-    box-sizing: border-box;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .title {
@@ -89,25 +88,26 @@ body {
 .prayer {
     white-space: pre-wrap;
     max-width: 33em;
-
-    max-height: 100vh;
-    overflow: auto;
 }
 
 #litany {
     background-image: url(./images/precious-blood-litany.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: auto;
+    max-height: 100%;
+}
+
+#litany::-webkit-scrollbar {
+    display: none;
 }
 
 #litany .litany-body {
     padding: 7em 0;
-    overflow: auto;
 }
 
 #litany p {
     max-width: 42em;
-
 }
 
 .prayer.wide {
